feat: Added sms verification and password reset passwords are also now hashed

--- a/Resources/accountActivation.html
+++ b/Resources/accountActivation.html
@@ -129,12 +129,12 @@
             color: gray;
         }
 
-        .button--orange {
-            background-color: #FF9642;
-            border-top: 10px solid #FF9642;
-            border-right: 18px solid #FF9642;
-            border-bottom: 10px solid #FF9642;
-            border-left: 18px solid #FF9642;
+        .button--green {
+            background-color: #008080;
+            border-top: 10px solid #008080;
+            border-right: 18px solid #008080;
+            border-bottom: 10px solid #008080;
+            border-left: 18px solid #008080;
         }
 
         .button--red {
@@ -452,8 +452,8 @@
                 <table class="email-content" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                     <tr>
                         <td class="email-masthead">
-                            <a href="http://localhost:4200" class="f-fallback email-masthead_name">
-                                TopGo
+                            <a href="http://localhost:3000" class="f-fallback email-masthead_name">
+                                Team 23 IB
                             </a>
                         </td>
                     </tr>
@@ -466,7 +466,7 @@
                                     <td class="content-cell">
                                         <div class="f-fallback">
                                             <h1>Hello,</h1>
-                                            <p>You recently created account for your TopGo. Use the button below to activate it. <strong>This activation is only valid for next hour.</strong></p>
+                                            <p>You recently created account for your certificate service. Use the button below to activate it. <strong>This activation is only valid for next hour.</strong></p>
                                             <!-- Action -->
                                             <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                                                 <tr>
@@ -476,17 +476,17 @@
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                                             <tr>
                                                                 <td align="center">
-                                                                    <a href="{{action_url}}" class="f-fallback button button--orange" target="_blank">Activate account</a>
+                                                                    <a href="{{action_url}}" class="f-fallback button button--green" target="_blank">Activate account</a>
                                                                 </td>
                                                             </tr>
                                                         </table>
                                                     </td>
                                                 </tr>
                                             </table>
-                                            <p>For security,If you did not create a TopGo account, please ignore this email.</p>
+                                            <p>For security,If you did not create a certificate service account, please ignore this email.</p>
                                             <p>
                                                 Thanks,
-                                                <br>The TopGo team
+                                                <br>IB team 23
                                             </p>
                                             <!-- Sub copy -->
                                             <table class="body-sub" role="presentation">
@@ -509,9 +509,9 @@
                                 <tr>
                                     <td class="content-cell" align="center">
                                         <p class="f-fallback sub align-center">
-                                            TopGoApp
-                                            <br>Dubai.
-                                            <br>Romania
+                                            IB team 23
+                                            <br>Novi Sad.
+                                            <br>Serbia
                                         </p>
                                     </td>
                                 </tr>
